# Cyclova

./: .gitignore  README.md  database.py  main.py  model.py  package-lock.json  pyproject.toml  requirements.txt  schemas.py
Agent/: Appointment.py
Backend/: README.md  alembic.ini  main.py  model.py  oauth2.py  package-lock.json  package.json  pyproject.toml  schemas.py
Backend/alembic/versions/: 65c72b300f6c_update.py
Backend/respository/: users.py
Backend/routers/: pregnancy_symptoms.py
Backend/routes/: authentication.py  pregnancy_tracker.py  users.py
Backend/utils/: appointment_util.py
Frontend/: .gitignore  README.md  next.config.js  package-lock.json  package.json
Frontend/.next/: app-build-manifest.json  trace
Frontend/.next/server/: _error.js  app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
Frontend/app/: layout.tsx  page.tsx
Frontend/app/appointment/: page.tsx
Frontend/app/appointments/: page.tsx
Frontend/app/components/: AnimatedAssistant.tsx  AnimatedBackground.tsx  Navbar.tsx  navbar.css
Frontend/app/context/: AuthContext.tsx
Frontend/app/login/: page.tsx
Frontend/app/period/: page.tsx
Frontend/app/periodscare/: page.tsx
Frontend/app/pregnancy/: page.tsx
Frontend/app/register/: page.tsx
Frontend/app/styles/: animated-assistant.css  animated-background.css  appointment.css  appointments.css  auth.css  home.css  (+5 more)
alembic/: env.py
respository/: users.py
routes/: appointment_agent.py  periodscare.py
utils/: ai_service.py  appointment_util.py  pregnancy_tracker.py
(+143 files in other folders)
