[project]
name = "cyclova"
version = "0.1.0"
description = ""
authors = [
    {name = "Hassan Mehmood",email = "ihassan463m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "langgraph (>=0.2.0,<0.3.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "langchain-community (>=0.3.22,<0.4.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "langchain-google-genai (>=2.1.3,<3.0.0)",
    "composio-langgraph (>=0.7.15,<0.8.0)",
    "alembic (>=1.15.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
